Fixing horizontal scroll due to calc() on parallax elements

--- a/src/components/navigation/Navigation.module.scss
+++ b/src/components/navigation/Navigation.module.scss
@@ -30,7 +30,7 @@
 @media (max-width: 640px) {
   .menu {
     justify-content: space-evenly;
-    margin-top: 24px;
+    margin-top: 16px;
     width: 100%;
   }
 }
