--- a/src/templates/container/Container.module.scss
+++ b/src/templates/container/Container.module.scss
@@ -1,4 +1,7 @@
 .container {
+  position: relative;
+  overflow: hidden;
+
   h1 {
     font-size: 2.4em;
     font-style: normal;
